[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# General
anyhow = "1.0.56"

# Logging
env_logger = "0.9"
log = "0.4.16"

# Tokio
tokio = { version = "1.17.0", features = ["full"] }

# Shutdown
tokio-graceful-shutdown = "0.5.0"

# Command line arguments
clap = { version = "3.1.9", features = ["derive"] }

warp = "0.3.2"
parking_lot = "0.12.0"

serde = { version = "1.0.136", features = ["derive"] }
config = "0.11.0"

lazy_static = "1.4"

async-walkdir = "0.2.0"

string-builder = "0.2.0"

async-std = "1.11.0"
futures-lite = "1.12.0"
once_cell = "1.12.0"

urlencoding = "2.1.0"
iuliia-rust = "0.1.0"
